Apps/uptimekuma/deployment.yaml
# docker run -d --restart=always -p 3001:3001 -v uptime-kuma:/app/data --name uptime-kuma louislam/uptime-kuma:1


apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1
          name: uptime-kuma
          ports:
            - containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma-app-data-volume
      restartPolicy: Always
      volumes:
        - name: uptime-kuma-app-data-volume
          nfs:
            server: 192.168.1.52
            path: /mnt/Home/Config/uptime
            readOnly: false
