Apps/uptimekuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma-service
  namespace: uptime-kuma
spec:
  ports:
    - name: "3001"
      port: 80
      targetPort: 3001
  selector:
    app: uptime-kuma
